--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ psycopg2-binary==2.9.5
 pycparser==2.21
 PyJWT==2.6.0
 python-decouple==3.8
+python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3
 requests==2.28.2
