--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,12 @@
 {
-  "version": 2,
   "builds": [
     {
       "src": "course_root/wsgi.py",
-      "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    },
-    {
-      "src": "build_files.sh",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "staticfiles_build"
-      }
+      "use": "@vercel/python"
     }
   ],
   "routes": [
+
     {
       "src": "/static/(.*)",
       "dest": "/static/$1"
