--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,27 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "course_root/wsgi.py",
-      "use": "@vercel/python"
+      "src": "projectname/wsgi.py",
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    },
+    {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "staticfiles_build"
+      }
     }
   ],
   "routes": [
-
     {
       "src": "/static/(.*)",
       "dest": "/static/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "course_root/wsgi.py"
+      "dest": "projectname/wsgi.py"
     }
   ]
 }
