--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,11 @@
 {
-  "version": 2,
   "builds": [
     {
       "src": "course_root/wsgi.py",
-      "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+      "use": "@vercel/python"
     }
   ],
   "routes": [
-    {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
     {
       "src": "/(.*)",
       "dest": "course_root/wsgi.py"
