added media src and dest to vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,13 @@
       "config": {
         "distDir": "staticfiles_build"
       }
+    },
+    {
+      "src": "build_files.sh",
+      "use": "@vercel/media-build",
+      "config": {
+        "distDir": "mediafiles_build"
+      }
     }
   ],
   "routes": [
