--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,13 @@
     {
       "src": "course_root/wsgi.py",
       "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3" }
     },
     {
       "src": "build_files.sh",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": ["staticfiles_build", "media"]
+        "distDir": "staticfiles_build"
       }
     }
   ],
